--- a/css/styles.css
+++ b/css/styles.css
@@ -210,3 +210,86 @@ margin-bottom: 26px;
     height: 53px;
     background-color: #02897a;
 }
+
+/* Quick Easy */
+.q-section {
+    padding-top: 150px;
+    padding-bottom: 100px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.q-container {
+    width: 956px;
+    margin-right: auto;
+        margin-left: auto;
+}
+.q-title {
+    font-weight: 700;
+    font-size: 32px;
+    text-align: center;
+    color: #22343d;
+    margin-bottom: 25px;
+}
+
+.q-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    text-align: center;
+    color: #22343d;
+    max-width: 542px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+}
+
+.q-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 25px 100px;
+    
+}
+
+
+.q-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 408px;
+}
+.q-item:nth-child(2) {
+    flex-direction: row-reverse;
+}
+.q-item:nth-child(3) {
+    flex-direction: row-reverse;
+}
+.q-photo {}
+
+.q-item-text {
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    color: #2f281e;
+    box-shadow: 2px 2px 10px 0 rgba(23, 58, 86, 0.15);
+    border-radius: 25px;
+    padding: 14px 20px;
+    width: 281px;
+}
+
+.q-button {
+    display: block;
+    margin-top: 50px;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 15px 30px;
+    font-family: inherit;
+    border-radius: 4px;
+    border: none;
+    max-width: 216px;
+    height: 53px;    
+    background: #02897a;
+    font-weight: 700;
+    font-size: 16px;
+    color: #fff;
+}
